# proton-bridge

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yml  .grype.yaml  BUILDS.md  CONTRIBUTING.md  COPYING.md  COPYING_NOTES.md  Changelog.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.development.yml  go.mod  go.sum  thing  unreleased.md
internal/frontend/bridge-gui/: AppController.cpp  AppController.h  BridgeMonitor.cpp  BridgeMonitor.h  BridgeSetup.cmake  CMakeLists.txt  Config.h.in  EventStreamWorker.h  Exception.h  FindQt.cmake  Log.cpp  Log.h  Pch.h  QMLBackend.cpp  QMLBackend.h  README.md  Resources.qrc  UserDirectories.h  UserList.h  Version.h.in  build.ps1  build.sh  main.cpp
internal/frontend/bridge-gui/DockIcon/: DockIcon.cpp  DockIcon.h
internal/frontend/bridge-gui/GRPC/: GRPCClient.cpp  GRPCClient.h  GRPCUtils.cpp  GRPCUtils.h  bridge.grpc.pb.cc  bridge.grpc.pb.h  bridge.pb.cc  bridge.pb.h
internal/frontend/bridge-gui/User/: User.cpp  User.h  UserList.cpp  UserList.h
internal/frontend/bridge-gui/Worker/: Overseer.cpp  Overseer.h  Worker.h
internal/frontend/bridge-gui/bridge-gui/: .lldbinit  AppController.cpp  AppController.h  BridgeApp.cpp  BridgeApp.h  BuildConfig.h.in  CMakeLists.txt  ClipboardProxy.cpp  ClipboardProxy.h  CommandLine.cpp  CommandLine.h  DeployDarwin.cmake  DeployLinux.cmake  DeployWindows.cmake  Doxyfile  EventStreamWorker.cpp  EventStreamWorker.h  Log.cpp  Log.h  LogUtils.cpp  LogUtils.h  Pch.h  QMLBackend.cpp  QMLBackend.h  Resources.qrc  Resources.rc.in  SentryUtils.cpp  SentryUtils.h  Settings.cpp  Settings.h  TrayIcon.cpp  TrayIcon.h  UserList.cpp  UserList.h  Version.h  Version.h.in  build.ps1  build.sh  main.cpp
internal/frontend/bridge-gui/bridge-gui-tester/: AppController.cpp  AppController.h  CMakeLists.txt  Cert.cpp  Cert.h  Doxyfile  GRPCMetaDataProcessor.cpp  GRPCMetaDataProcessor.h  GRPCQtProxy.cpp  GRPCQtProxy.h  GRPCServerWorker.cpp  GRPCServerWorker.h  GRPCService.cpp  GRPCService.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Pch.h  UserDialog.cpp  UserDialog.h  UserDialog.ui  UserTable.cpp  UserTable.h  main.cpp
internal/frontend/bridge-gui/bridge-gui-tester/Tabs/: EventsTab.cpp  EventsTab.h  EventsTab.ui  KnowledgeBaseTab.cpp  KnowledgeBaseTab.h  KnowledgeBaseTab.ui  SettingsTab.cpp  SettingsTab.h  SettingsTab.ui  UsersTab.cpp  UsersTab.h  UsersTab.ui
internal/frontend/bridge-gui/bridge-gui/DockIcon/: DockIcon.cpp  DockIcon.mm
internal/frontend/bridge-gui/bridge-gui/MacOS/: DockIcon.cpp  DockIcon.h  DockIcon.mm  SecondInstance.h  SecondInstance.mm
internal/frontend/bridge-gui/bridge-gui/qml/: AccountDelegate.qml  AccountView.qml  Banner.qml  Bridge.qml  Bridge_test.qml  BugCategoryView.qml  BugQuestionView.qml  BugReportFlow.qml  BugReportView.qml  CategoryItem.qml  Configuration.qml  ConfigurationItem.qml  ConnectionModeSettings.qml  ContentWrapper.qml  DebugWrapper.qml  GeneralSettings.qml  HelpView.qml  IMAPSettings.qml  KeychainSettings.qml  LinkLabel.qml  LocalCacheSettings.qml  MainWindow.qml  NoAccountView.qml  NotificationDialog.qml  NotificationPopups.qml  PortSettings.qml  QuestionItem.qml  SMTPSettings.qml  SettingsItem.qml  SettingsView.qml  SetupGuide.qml  SignIn.qml  SplashScreen.qml  Status.qml  StatusWindow.qml  UserNotificationDialog.qml  WebFrameWindow.qml  WebViewWindow.qml  WelcomeGuide.qml
internal/frontend/bridge-gui/bridge-gui/qml/BridgeTest/: UserControl.qml  UserList.qml  UserModel.qml
internal/frontend/bridge-gui/bridge-gui/qml/BugReport/: BugCategoryView.qml  BugQuestionView.qml  BugReportFlow.qml  BugReportView.qml  CategoryItem.qml  QuestionItem.qml
internal/frontend/bridge-gui/bridge-gui/qml/Notifications/: Notification.qml  NotificationFilter.qml  Notifications.qml
internal/frontend/bridge-gui/bridge-gui/qml/Proton/: Action.qml  ApplicationWindow.qml  Button.qml  CheckBox.qml  ColorScheme.qml  ComboBox.qml  ContextMenu.qml  Dialog.qml  InfoTooltip.qml  Label.qml  LinkLabel.qml  Menu.qml  MenuItem.qml  Popup.qml  RadioButton.qml  Style.qml  Switch.qml  TextArea.qml  TextField.qml  Toggle.qml  WebFrame.qml  WebView.qml  WebViewOverlay.qml  qmldir
internal/frontend/bridge-gui/bridge-gui/qml/Resources/: ComingSoon.html  bug_report_flow.json
internal/frontend/bridge-gui/bridgepp/: CMakeLists.txt  Doxyfile  Pch.h
internal/frontend/bridge-gui/bridgepp/Test/: TestBridgeUtils.cpp  TestBugReportFlow.cpp  TestBugReportFlow.h  TestCLI.cpp  TestException.cpp  TestSessionID.cpp  TestWorker.cpp  TestWorker.h
internal/frontend/bridge-gui/bridgepp/bridgepp/: BridgeLib.cpp  BridgeLib.h  BridgeUtils.cpp  BridgeUtils.h  ProcessMonitor.cpp  ProcessMonitor.h
internal/frontend/bridge-gui/qml/: AccountView.qml  Banner.qml  Bridge.qml  BugReportView.qml  ConfigurationItem.qml  ContentWrapper.qml  HelpView.qml  KeychainSettings.qml  MainWindow.qml  NotificationDialog.qml  NotificationPopups.qml  SMTPSettings.qml  SettingsItem.qml  SignIn.qml  Status.qml
internal/frontend/bridge-gui/qml/BridgeTest/: UserList.qml
internal/frontend/bridge-gui/qml/Notifications/: Notifications.qml
internal/frontend/bridge-gui/qml/Proton/: Action.qml  ApplicationWindow.qml  Button.qml  CheckBox.qml  ColorScheme.qml  MenuItem.qml  Popup.qml  TextField.qml  Toggle.qml
internal/frontend/bridge-gui/qml/tests/: CheckBoxes.qml  TestComponents.qml  TextAreas.qml
internal/frontend/bridgepp/: CMakeLists.txt  Pch.h  bridge_setup.cmake
internal/frontend/bridgepp/bridgepp/: BridgeUtils.cpp  BridgeUtils.h
internal/frontend/bridgepp/bridgepp/GRPC/: GRPCClient.cpp  GRPCClient.h  GRPCUtils.cpp  GRPCUtils.h  bridge.grpc.pb.h  bridge.pb.cc  bridge.pb.h
internal/frontend/bridgepp/bridgepp/Log/: Log.cpp  Log.h
internal/frontend/bridgepp/bridgepp/Worker/: Overseer.cpp  Worker.h
test/rpc/client/: BridgeRpcClientTest.cpp  CMakeLists.txt  Exception.cpp  Exception.h  RpcClient.cpp  RpcClient.h
test/rpc/client/grpc/: bridge.grpc.pb.cc  bridge.grpc.pb.h  bridge.pb.cc  bridge.pb.h
test/rpc/client/rpc/: bridge_rpc.grpc.pb.cc  bridge_rpc.grpc.pb.h  bridge_rpc.pb.cc  bridge_rpc.pb.h
(+1943 files in other folders)
